2008-03-10  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclBasic.c (ExprAbsFunc):	Revised so that the abs()
	* tests/expr.test:	function and the [::tcl::mathfunc::abs]
	command do not return the value of -0, or equivalent values with
	more alarming string reps like -1e-350.  [Bug 1893815].

2008-03-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclResult.c (ReleaseKeys): Workaround for [Bug
	  1904907]. Reset the return option keys to NULL to allow full
	  re-initialization by GetKeys(). This introduces a memory leak
	  for the key objects, but gets us around a crash in the
	  finalization of reflected channels when handling returns, either
	  at compile- or runtime. In both cases we access the keys after
	  they have been released by their thread exit handler. A proper
	  fix is entangled with the untangling of the finalization
	  ordering and attendant issues. For now we choose the lesser
	  evil.

2008-03-07  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclExecute.c (Tcl_ExprObj):	Revised expression bytecode
	compiling so that bytecodes invalid due to changing context or due
	to the difference between expressions and scripts are not reused.
	[Bug 1899164].

	* generic/tclCmdAH.c:	Revised direct evaluation implementation of
	[expr] so that [expr $e] caches compiled bytecodes for the expression
	as the intrep of $e.

	* tests/execute.test (execute-6.*):	More tests checking that
	script bytecode is invalidated in the right situations.

2008-03-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* win/configure.in: Add AC_HEADER_STDC to support msys/win64.

2008-03-06  Donal K. Fellows  <dkf@users.sf.net>

	* doc/namespace.n: Minor tidying up. [Bug 1909019]

2008-03-04  Don Porter	<dgp@users.sourceforge.net>

	* tests/execute.test (6.3,4):	Added tests for [Bug 1899164].

2008-03-03  Reinhard Max  <max@suse.de>

	* unix/tclUnixChan.c: Fix mark and space parity on Linux, which uses
	CMSPAR instead of PAREXT.
